Second commit Added auth forms, more work on Nav Bar.

--- a/mba_consent_form/site/site_templates/index.html
+++ b/mba_consent_form/site/site_templates/index.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Hello</h1>
+
+<!-- <div class = "indexdiv">
+<h1 class = "indexh1">Welcome to Micro Brow Art</h1>
+<h2 class = "indexh2">Here are your Profile Details</h2>
+
+<div>
+    <ul class = "list-group">
+        <li class = "list-group-item">Email: </li>
+        <li class = "list-group-item">Token: </li>
+    </ul>
+</div>
+</div> -->
 
 {% endblock content %}
