Added some login functionality.

--- a/mba_consent_form/authentication/auth_templates/signup.html
+++ b/mba_consent_form/authentication/auth_templates/signup.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h1 class = "signuph1"> Sign Up Here </h1>
+<!-- 
+<h1 class = "signuph1"> Sign Up Here </h1> -->
 
 <main class="container">
     <div class="row">
