--- a/mba_consent_form/authentication/auth_templates/signin.html
+++ b/mba_consent_form/authentication/auth_templates/signin.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
-<h1 class = "signinh1"> Sign In Here </h1>
+<main class="container">
+    <div class="row">
+        <aside class="col-12 col-md-6">
+            <h2>Sign In Here</h2>
+            {% include 'forms.html' %}
+        </aside>
+    </div>
+</main>
 
 {% endblock content %}
