--- a/mba_consent_form/site/site_templates/index.html
+++ b/mba_consent_form/site/site_templates/index.html
@@ -2,6 +2,26 @@
 
 {% block content %}
 
+<div class="container">
+    {% with messages = get_flashed_messages(with_categories = true) %}
+        {% if messages %}
+            {% for cat,msg in messages %}
+                {% if cat == 'user-created' %}
+                    <div class="alert alert-success">
+                        {{ msg }}
+                        <button type="button" class = 'close' data-dismiss = 'alert'>&times;</button>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+</div>
+
+<header class = "container">
+    <h3> Welcome to Micro Brow Art! {{ current_user.email }} </h3>
+</header>
+
+
 <!-- <div class = "indexdiv">
 <h1 class = "indexh1">Welcome to Micro Brow Art</h1>
 <h2 class = "indexh2">Here are your Profile Details</h2>
