Fully functional add customer plus styling.

--- a/mba_consent_form/authentication/auth_templates/signin.html
+++ b/mba_consent_form/authentication/auth_templates/signin.html
@@ -2,13 +2,15 @@
 
 {% block content %}
 
+<div class = 'siform'>
 <main class="container">
     <div class="row">
         <aside class="col-12 col-md-6">
-            <h2>Sign In Here</h2>
+            <h2 class = "si">Sign In Here</h2>
             {% include 'forms.html' %}
         </aside>
     </div>
 </main>
+</div>
 
 {% endblock content %}
