--- a/mba_consent_form/consent/consent_templates/consent.html
+++ b/mba_consent_form/consent/consent_templates/consent.html
@@ -2,6 +2,24 @@
 
 {% block content %}
 
-<h1 class = "consenth1"> Consent Form Here! </h1>
+<h3 class = "consenth1">CONSENT AND RELEASE <br> AGREEMENT FOR PERMANENT <br>COSMETICS</h3>
+
+<h5 class = "consenth2">This form provides information to assist in making a decision on whether or not to 
+    undergo semi-permenant tattooing application. This application utilizes pharmaceutical
+    grade pigments for long-lasting results.  During the procedure pigment is deposited into
+    the dermal layer of the skin. All instruments are fully sealed and sterilized before use
+    and disposed of after use.
+</h5>
+
+<div class = "consform">
+<main id = "consform" class="container">
+<div class="row">
+    <aside class="col-12 col-md-6">
+        <h2 class = "cfh1">Consent Form Here</h2>
+        {% include 'consentform.html' %}
+    </aside>
+</div>
+</main>
+</div>
 
 {% endblock content %}
