--- a/mba_consent_form/customer/customer_templates/customer.html
+++ b/mba_consent_form/customer/customer_templates/customer.html
@@ -2,15 +2,16 @@
 
 {% block content %}
 
-<div class = "suform">
-<main class="container">
+<div class = "custform">
+<main id = "custform" class="container">
     <div class="row">
         <aside class="col-12 col-md-6">
-            <h2 class = "su">Create Account Here</h2>
-            {% include 'forms.html' %}
+            <h2>Enter Customer Information</h2>
+            {% include 'custform.html' %}
         </aside>
     </div>
 </main>
 </div>
+
 
 {% endblock content %}
