Site mostly completed just need to host.

--- a/mba_consent_form/customer/customer_templates/customer.html
+++ b/mba_consent_form/customer/customer_templates/customer.html
@@ -3,10 +3,11 @@
 {% block content %}
 
 <div class = "custform">
-    <div class = "lorem"><h3 class = "custh1">Form To Add New Customers:</h3>
-         <h5 class = "custh2">This allows you to add customers to your own database,
-             Enter First and Last Name as a requirement no additional
-             information needed.
+    <div class = "lorem"><h2 class = "custh1">Form To Add New Customers</h2>
+        <br>
+         <h5 class = "custh2">This allows you to add customers to your own database.
+             Enter First and Last Name as a requirement, no additional
+             information neccesary.
          </h5></div>
 <main id = "custform" class="container">
     <div class="row">
