--- a/mba_consent_form/search/searcher_templates/search.html
+++ b/mba_consent_form/search/searcher_templates/search.html
@@ -1,6 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2 class = 'results'>Results</h2>
+<table id = 'searchtable' class = "card">
+  <tr>
+    <th>First Name</th>
+    <td>{{ result[1] }}</td>
+  </tr>
+  <tr>
+    <th>Last Name</th>
+    <td>{{ result[2] }}</td>
+  </tr>
+  <tr>
+    <th>Needle Type</th>
+    <td>{{ result[3] }}</td>
+  </tr>
+  <tr>
+    <th>Machine Type</th>
+    <td>{{ result[4] }}</td>
+  </tr>
+  <tr>
+    <th>Pigment/Color</th>
+    <td>{{ result[5] }}</td>
+  </tr>
+  <tr>
+    <th>Brow Type</th>
+    <td>{{ result[6] }}</td>
+  </tr>
+</table>
 
 <div class = "searchform">
 <main class="container">
@@ -12,60 +39,6 @@
     </div>
 </main>
 </div>
-
-<!-- <table class = "setable"> 
-    <head> 
-    <tr> 
-        <th>{{ result }}<th> 
-        <th>Last Name</th> 
-        <th>Needle</th> 
-        <th>Machine</th> 
-        <th>Pigment</th> 
-        <th>Brow Type</th> 
-    </tr> 
-    </head> 
-    <tbody> 
-        {% for row in result %}  
-            <tr> 
-                <td>{{row[0]}}</td> 
-                <td>{{row[1]}}</td> 
-                <td>{{row[2]}}</td> 
-                <td>{{row[3]}}</td> 
-                <td>{{row[4]}}</td> 
-                <td>{{row[5]}}</td> 
-            </tr> 
-        {% endfor %} 
-    </tbody> 
-</table> -->
-
-<table>
-    <tr>
-      <th>First Name</th>
-      <td>{{ result[1] }}</td>
-    </tr>
-    <tr>
-      <th>Last Name</th>
-      <td>{{ result[2] }}</td>
-    </tr>
-    <tr>
-      <th>Needle</th>
-      <td>{{ result[3] }}</td>
-    </tr>
-    <tr>
-      <th>Machine</th>
-      <td>{{ result[4] }}</td>
-    </tr>
-    <tr>
-      <th>Pigment</th>
-      <td>{{ result[5] }}</td>
-    </tr>
-    <tr>
-      <th>Brow Type</th>
-      <td>{{ result[6] }}</td>
-    </tr>
-  </table>
-
-
 
 {% endblock content %}
 
