Adding hosting files.

--- a/mba_consent_form/site/site_templates/index.html
+++ b/mba_consent_form/site/site_templates/index.html
@@ -32,7 +32,7 @@
 </div>
 
     <div class = 'diq'>
-        <h4>Here is your Daily Inspirational Quote</h4>
+        <h4>Here is your Daily Zen Quote</h4>
         <br>
         {% for datas in data %}
         <span><i>"{{ datas["q"] }}"</i></span>
